# PrinterSimulator

./: .gitignore  Application.cpp  CMakeLists.txt  Generate.cpp  README.md  create_tool.sh  generate.sh  run.sh
Distortions/: Distortions.hpp
Examples_of_defects/: README.md
console_tool/: ImageGen.cpp  README.md  imgen
